# flipzy

./: README.md  app.py  format.py  pyproject.toml  run.sh
.github/workflows/: format-check.yml
data/: vocabulary_cards.json
src/: __init__.py  config.py  sidebar.py  spaced_repetition.py  storage.py
src/pages/: __init__.py  add_vocabulary.py  home.py  manage_cards.py  review.py  statistics.py
